Fixed spacing issues

--- a/css/styles.css
+++ b/css/styles.css
@@ -12037,7 +12037,7 @@ img {
     width: fit-content;
     aspect-ratio: 1/1;
     object-fit: contain;
-    margin-left: 11%;
+    margin-left: 50px;
   }
 
   .portfolio-numbers-2{
